--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ lde (1.9.1-1) unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
- -- Genfa Xu <genfa@unknown>  Sat, 07 Feb 2015 22:42:15 +0800
+ -- Zhuoyi Xu <xzy476386434@vip.qq.com>  Sat, 07 Feb 2015 22:42:15 +0800
