--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-lde (1.9.1-1) unstable; urgency=low
+lde (1.9.1-1) utopic; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
