--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lde (1.9.3-2) utopic; urgency=medium
+
+  * Fix rc exists judgement (Closes: #53)
+
+ -- Zhuoyi Xu (LDE Team) <xzy476386434@vip.qq.com>  Mon, 23 Feb 2015 13:28:30 +0800
+
 lde (1.9.3-1) utopic; urgency=low
 
   * Add note in changelog (Closes: #51)
